# clinical_demo

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  description.md  pyproject.toml
.github/workflows/: ci.yml
data/terminology/: README.md  reviewed_expansions.json  reviewed_mappings.json  reviewed_medication_classes.json  reviewed_reference_limits.json
docs/: concept-mapping-failure-taxonomy.md  data-provenance-and-artifact-policy.md  deployment-readiness.md  evaluation-layers-and-gates.md  extractor-chia-validation.md  fhir-patient-processing.md  free-text-note-evidence-design.md  implementation-plan.md  known-limitations-and-scope.md  llm-use-levels-and-cost-controls.md  matcher-assumption-modes.md  mimic-iv-calibration-and-governance.md  mimic-note-privacy-policy.md  patient-evidence-eval-runbook.md  patient-evidence-labeling-guide.md  patient-evidence-retrieval-architecture.md  system-architecture-walkthrough.md  terminology-mapping-architecture.md  trec-trialgpt-benchmark-plan.md  trial-extraction-pipeline.md
eval/benchmarks/: local_trialgpt_trec_seed.json
eval/calibration/: patient_evidence_candidates.json  patient_evidence_labels.json
scripts/: build_patient_evidence_calibration.py  check_compiler_diagnostics.py  check_public_artifact_privacy.py  check_terminology_regressions.py  eval.py  export_patient_evidence_public_summary.py  export_trial_benchmark.py  probe_umls.py  score_pair.py  warm_terminology_surfaces.py
src/clinical_demo/: cost_telemetry.py  research.py  settings.py
tests/: conftest.py  test_patient_evidence_public_summary.py  test_public_artifact_privacy_gate.py
tests/adjudication/: test_patient_evidence.py
tests/api/: test_app.py
tests/compiler/: test_compound_time.py  test_measurement.py  test_medication.py  test_parity.py  test_pipeline.py  test_predicate_matcher.py  test_reviewer_queue.py  test_schema.py  test_validation.py
tests/data/: test_synthea.py
tests/evals/: test_compiler_review.py  test_diagnostics.py  test_eval_summary.py  test_movement.py  test_patient_evidence.py  test_store.py  test_trial_benchmark.py
tests/extractor/: test_composite.py  test_fix.py  test_schema.py
tests/graph/: test_route.py  test_score_pair_graph.py
tests/matcher/: _fixtures.py  (+3 more)
web/: package-lock.json
(+130 files in other folders)
