[project]
name = "clinical-demo"
version = "0.1.0"
description = "Clinical Trial Eligibility Co-Pilot — portfolio demo for FDE interview"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Julius Mopper" }]
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "fhir-resources>=8.0",
    "openai>=2.32.0",
    "pydantic-settings>=2.14.0",
    "langfuse>=4",
    "langgraph>=1",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "marimo>=0.23.3",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "marimo>=0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clinical_demo"]

# ---------- ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# Conservative starter set; tighten as the codebase grows.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",     # line length handled by formatter
    "SIM103",   # early-return validation chains are clearer than negated boolean returns
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # asserts in tests are fine

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- mypy ----------
# Non-strict starter config. Tighten later (disallow_untyped_defs, etc.).
[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
pythonpath = ["src"]
